--- a/notebooks/play.ipynb
+++ b/notebooks/play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# For intera\n",
+    "# For interactive development\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
